--- a/package.json
+++ b/package.json
@@ -63,7 +63,6 @@
     "tslib": "^2.3.0",
     "typescript": "~5.9.2",
     "typescript-eslint": "^8.40.0",
-    "vite": "^7.0.0",
-    "vitest": "^4.0.0"
+    "vite": "^7.0.0"
   }
 }
